ingress.yaml
#@ load("@ytt:data", "data")

---

apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: hungryman
  namespace: #@ data.values.workloadNamespace
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - #@ 'hungryman.' + data.values.domainName
    port:
      name: http
      number: 80
      protocol: HTTP
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: hungryman
  namespace: #@ data.values.workloadNamespace
spec:
  gateways:
  - hungryman
  hosts:
  - #@ 'hungryman.' + data.values.domainName
  http:
  - match:
    - port: 80
    route:
    - destination:
        host: hungryman
        port:
          number: 8080
